<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_rounded"
    android:paddingBottom="@dimen/_10sdp">


    <TextView
        android:id="@+id/tv_leave_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/Chooseprofiephoto"
        android:textColor="@color/text_grey"
        android:textSize="16dp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <View
        android:layout_width="match_parent"
        android:id="@+id/vi_1"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_leave_group"></View>

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:padding="@dimen/_10sdp"
        android:text="@string/takefromcamara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vi_1"
        app:layout_constraintWidth_percent=".8"></TextView>

    <TextView
        android:id="@+id/choose_galalry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/Choosefromgallary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_photo"
        app:layout_constraintWidth_percent=".8"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>
