<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgorund_login"
        tools:context=".ui.activity.LoginActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/aizonia_regular"
                android:text="WeddGRings"
                android:textColor="@color/white"
                android:textSize="@dimen/_21sdp"
                app:layout_constraintBottom_toTopOf="@+id/g1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="@dimen/_5sdp"
                app:layout_constraintGuide_percent="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.Guideline>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/g1"
                tools:context=".ui.activity.SplashScreen">

                <TextView
                    android:id="@+id/tv_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensansregular"
                    android:text="Hello"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></TextView>

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansbold"
                    android:text="Welcome Back"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hello">

                </TextView>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_white_full_rounded"
                    android:drawableLeft="@drawable/mail_icon"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="Enter phone or email"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.090"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
                    app:layout_constraintWidth_percent="0.8"></EditText>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_white_full_rounded"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.090"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_email"
                    app:layout_constraintWidth_percent="0.8"></EditText>

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/background_white_stoke_rounded"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.090"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"
                    app:layout_constraintWidth_percent="0.8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensansregular"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/nrmltextsize"></TextView>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="7dp"
                        android:padding="2dp"
                        android:rotation="180"
                        android:src="@drawable/backarr"></ImageView>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensansregular"
                    android:text="Forgot Password"
                    android:visibility="gone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nrmltextsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_login"></TextView>

                <TextView
                    android:id="@+id/tv_dont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/opensansregular"
                    android:text="@string/donthavemail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nrmltextsize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword"></TextView>

                <LinearLayout
                    android:id="@+id/ll_or"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.06"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dont"
                    app:layout_constraintWidth_percent="0.8">

                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/white"></View>

                    <TextView
                        android:id="@+id/tv_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/opensansregular"
                        android:text="@string/or"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/white"></View>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_fb"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/background_white_full_rounded"
                    android:elevation="2dp"
                    android:visibility="gone"
                    android:fontFamily="@font/opensansregular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:translationZ="2dp"
                    app:layout_constraintHeight_percent="0.085"
                    app:layout_constraintStart_toStartOf="@+id/ll_login"
                    app:layout_constraintTop_toBottomOf="@+id/ll_or"
                    app:layout_constraintWidth_percent="0.38">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/facebook"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/opensansregular"
                        android:text="@string/facebook"
                        android:textColor="#5D7096"
                        android:textSize="@dimen/nrmltextsize"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_google"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:background="@drawable/background_white_full_rounded"
                    android:elevation="2dp"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:translationZ="2dp"
                    app:layout_constraintEnd_toEndOf="@+id/ll_login"
                    app:layout_constraintHeight_percent="0.085"
                    app:layout_constraintTop_toBottomOf="@+id/ll_or"
                    app:layout_constraintWidth_percent="0.38">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/google"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/opensansregular"
                        android:text="@string/google"
                        android:textColor="#5D7096"
                        android:textSize="@dimen/nrmltextsize"></TextView>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
